--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
   "dependencies": {
     "@types/fluent-ffmpeg": "^2.1.14",
     "@types/fs-extra": "^8.1.0",
+    "atob": "^2.1.2",
     "fluent-ffmpeg": "^2.1.2",
     "fs-extra": "^9.0.0",
+    "hero-patterns": "^2.1.0",
     "nodemon": "^2.0.4",
-    "svg2img": "^0.6.2",
+    "random-a11y-combo": "^1.0.0",
+    "randomcolor": "^0.5.4",
+    "svg-to-img": "^2.0.9",
     "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.8.3"
   }
