somethning about uploading and videos

--- a/package.json
+++ b/package.json
@@ -15,14 +15,21 @@
     "@types/fluent-ffmpeg": "^2.1.14",
     "@types/fs-extra": "^8.1.0",
     "atob": "^2.1.2",
+    "bug-killer": "^4.4.4",
     "fluent-ffmpeg": "^2.1.2",
+    "fs": "0.0.1-security",
     "fs-extra": "^9.0.0",
     "hero-patterns": "^2.1.0",
+    "lien": "^3.3.0",
     "nodemon": "^2.0.4",
+    "opn": "^6.0.0",
+    "pretty-bytes": "^5.3.0",
+    "r-json": "^1.2.9",
     "random-a11y-combo": "^1.0.0",
     "randomcolor": "^0.5.4",
     "svg-to-img": "^2.0.9",
     "ts-node-dev": "^1.0.0-pre.44",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "youtube-api": "^2.0.10"
   }
 }
