--- a/package.json
+++ b/package.json
@@ -5,14 +5,11 @@
   "main": "index.js",
   "scripts": {
     "tsc": "tsc",
-
     "ln": "npm run lnData && npm run lnTypes",
     "lnData": "ln -sfn /Users/julius.reade/Code/PER/thewritersdaily/util/data/* '/Users/julius.reade/Google Drive/thewritersdailypodcast/twd_video_generator/src/symbolic/data'",
     "lnTypes": "ln -sfn /Users/julius.reade/Code/PER/thewritersdaily/util/types/data.ts '/Users/julius.reade/Google Drive/thewritersdailypodcast/twd_video_generator/src/symbolic/types/data.ts'",
-
     "dev": "npm run ln && ts-node-dev --respawn --transpileOnly ./src/index.ts",
     "prod": "npm run ln && ts-node ./src/index.ts",
-
     "upload": "npm run ln && ts-node ./src/generateYouTubeUpload.ts"
   },
   "keywords": [],
@@ -21,13 +18,17 @@
   "dependencies": {
     "@types/fluent-ffmpeg": "^2.1.14",
     "@types/fs-extra": "^8.1.0",
+    "@types/geopattern": "^1.2.4",
     "atob": "^2.1.2",
+    "base64-img": "^1.0.4",
     "bug-killer": "^4.4.4",
     "fluent-ffmpeg": "^2.1.2",
     "fs": "0.0.1-security",
     "fs-extra": "^9.0.0",
+    "geopattern": "^1.2.3",
     "hero-patterns": "^2.1.0",
     "lien": "^3.3.0",
+    "nice-color-palettes": "^3.0.0",
     "nodemon": "^2.0.4",
     "opn": "^6.0.0",
     "pretty-bytes": "^5.3.0",
@@ -35,6 +36,8 @@
     "random-a11y-combo": "^1.0.0",
     "randomcolor": "^0.5.4",
     "svg-to-img": "^2.0.9",
+    "svg-to-png": "^4.0.0",
+    "trianglify": "^4.0.0",
     "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.8.3",
     "youtube-api": "^2.0.10"
